--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-
+    
     <header>
         <nav>
             <ul>
@@ -17,9 +17,10 @@
                 <li><a href="favourite.html">favourite</a></li>
                 <li><a href="about.html">About</a></li>
             </ul>
+            </div>
         </nav>
     </header>
-
+    
     <marquee
         scrollamount="15">
             <h1>
